clean up folder system

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@
 .AppleDouble
 .LSOverride
 /20181116/__pycache__
-/20181116/fx.txt
-/20181116/fxRate.py
+/myprojects/stocks.csv
+/myprojects/stocks2.csv
