added object exercise

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 /20181116/__pycache__
 /myprojects/stocks.csv
 /myprojects/stocks2.csv
+myprojects/sample.py
+myprojects/sample.txt
+lecture.py
+.vscode/settings.json
